# pact-toolbox

./: .gitattributes  .gitignore  .ignore  .npmignore  .typos.toml  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DI-CONTAINER.md  Dockerfile  MIGRATION-DI.md  README.md  TODO.md  biome.json  cliff.toml  cyclic-dependencies-analysis.md  dprint.json  jest.ts  justfile  package.json  pact-toolbox.config.mjs  pact-toolbox.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  project-propsal.md  rust-toolchain.toml  sss.md  test.ts  tsconfig.json  turbo.json  vitest.workspace.js  wallet-system.md
.cargo/: config.toml
.changeset/: afraid-tools-mix.md  evil-boxes-visit.md  fine-groups-peel.md  major-bugs-fly.md
.github/: napi.yml
.github/workflows/: ci.yml  deploy-docs.yml  main.yaml  pact-transformer-ci.yml  release.yml
.husky/: install.mjs  pre-commit
apps/cli/: .eslintignore  .gitignore  CHANGELOG.md  README.md  package.json  pact-toolbox.config.ts  tsconfig.json  tsdown.config.ts  tsup.config.ts  vitest.config.ts
apps/docs/: .gitignore  README.md  generate-api.ts  package.json  rspress.config.ts  tsconfig.json  typedoc.json
apps/pactlings/: .gitignore  CHANGELOG.md  info.json  package.json
apps/todo-mvc/: package.json  pact-toolbox.config.ts  vite.config.ts
crates/mining-trigger/: .dockerignore  Cargo.toml  Dockerfile  build-docker.sh  publish.sh  test_image.sh
crates/mining-trigger/src/: main.rs  trigger_state.rs
crates/node_binding/: Cargo.toml  index.js  package.json  tsconfig.json
crates/node_binding/npm/darwin-arm64/: README.md  package.json
crates/node_binding/npm/darwin-x64/: README.md  package.json
crates/node_binding/npm/linux-arm64-gnu/: README.md  package.json
crates/node_binding/npm/linux-arm64-musl/: README.md  package.json
crates/node_binding/npm/linux-x64-gnu/: README.md  package.json
crates/node_binding/npm/linux-x64-musl/: README.md  package.json
crates/node_binding/npm/wasm32-wasi/: README.md  package.json
crates/node_binding/npm/win32-arm64-msvc/: README.md  package.json
crates/node_binding/npm/win32-x64-msvc/: README.md  package.json
crates/pact-transformer/: .gitignore  .npmignore  .prettierignore  ACCOMPLISHMENTS.md  Cargo.toml  OPTIMIZATION_ROADMAP.md  README.md  browser.js  build.rs  docker-compose.test.yml  example.js  index.d.ts  index.js  package.json  pact-transformer-napi.linux-x64-gnu.node  pact-transformer.wasi-browser.js  pact-transformer.wasi.cjs  platform-test.sh  simple-test.js  test-module.js  test-optimized.mjs  test-wasi.mjs  test.mjs  tsconfig.json  vitest.config.ts
crates/pact-transformer-napi/: .npmignore  Cargo.toml  README.md  index.d.ts  index.js  package.json  pact-transformer-napi.linux-x64-gnu.node
crates/pact-transformer-napi/src/: lib.rs  parser.rs  types.rs  utils.rs
crates/pact-transformer/.cargo/: config.toml
crates/pact-transformer/npm/android-arm-eabi/: README.md  package.json
crates/pact-transformer/npm/android-arm64/: README.md  package.json
crates/pact-transformer/npm/darwin-arm64/: README.md  package.json
crates/pact-transformer/npm/darwin-x64/: README.md  package.json
crates/pact-transformer/npm/freebsd-x64/: README.md  package.json
crates/pact-transformer/npm/linux-arm-gnueabihf/: README.md  package.json
crates/pact-transformer/npm/linux-arm64-gnu/: README.md  package.json
crates/pact-transformer/npm/linux-arm64-musl/: README.md  package.json
crates/pact-transformer/npm/linux-x64-gnu/: README.md  package.json
crates/pact-transformer/npm/linux-x64-musl/: README.md  package.json
crates/pact-transformer/npm/threads-wasm32/: README.md  package.json
crates/pact-transformer/npm/wasm32-wasip1-threads/: README.md  package.json
crates/pact-transformer/npm/win32-arm64-msvc/: README.md  package.json
crates/pact-transformer/npm/win32-ia32-msvc/: README.md  package.json
crates/pact-transformer/npm/win32-x64-msvc/: README.md  package.json
crates/pact-transformer/scripts/: build-all-platforms.sh  publish-pact-transformer.js
crates/pact-transformer/src/: api.rs  ast.rs  benchmark.rs  code_generator.rs  config.rs  error.rs  file_ops.rs  lib.rs  parser.rs  plugin.rs  source_map.rs  test_generation.rs  transformer.rs  types.rs  utils.rs  watch.rs
crates/pact-transformer/src/api/: test.rs
crates/pact-transformer/src/docs/: html.rs  json.rs  markdown.rs  mod.rs  playground.rs  test_demo.rs
crates/pact-transformer/src/frameworks/: angular.rs  mod.rs  react.rs  svelte.rs  vue.rs
crates/pact-transformer/src/optimized/: arena.rs  code_generator.rs  mod.rs  parser.rs  queries.rs  types.rs
crates/pact-transformer/src/templates/docs/: base.html  function.html  module.html  schema.html
crates/pact-transformer/src/testing/: ava.rs  coverage.rs  jest.rs  mocha.rs  mocks.rs  mod.rs  vitest.rs
crates/pact-transformer/tests/: pact-transformer.test.ts  transformer.test.ts
docs/: packages-overview.md  process-management.md
examples/: di-migration.md
examples/todo-mvc-common/: CHANGELOG.md  README.md  package.json  pact-toolbox.config.mjs  pact-toolbox.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts  vitest.setup.ts
examples/todo-mvc-next/: .gitignore  CHANGELOG.md  next.config.mjs  next.config.ts  package.json  pact-toolbox.config.mjs
examples/todo-mvc-nextjs/: .gitignore  README.md  next.config.js  package.json  pact-toolbox.config.ts  tsconfig.json
examples/todo-mvc-rsbuild/: .gitignore  CHANGELOG.md  package.json  pact-toolbox.config.ts  rsbuild.config.ts
examples/todo-mvc-vite/: .gitignore  CHANGELOG.md  Dockerfile  README.md  package.json  pact-toolbox.config.ts  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.setup.ts
pact/: hello-world.pact  hello-world.repl  meat-token.pact  todos.pact
src/: cli.ts  client.ts  config.ts  defaults.ts  index.ts  logger.ts  playground.ts  utils.ts
src/commands/: fund.ts  init.ts  ns.ts  types.ts
src/contracts/: coin.ts
src/pact/: accounts.handlebars  accounts.handlebars.ts  deployPrelude.ts  devnet.ts  downloadPrelude.ts  index.ts  utils.ts  (+6 more)
tests/: hello.spec.ts  meat.spec.ts  todos.spec.ts
(+167 files in other folders)
