[package]
name = "chainweb-mining-trigger"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
actix-cors = "0.7.1"
reqwest = { version = "0.12.19", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1.45.1", features = ["rt-multi-thread", "net", "time", "macros", "signal", "sync"] }
clap = { version = "4.5.39", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
futures = "0.3.31"
rand = { version = "0.9.1" }
once_cell = "1.21"
