[package]
name = "pact-transformer-napi"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"
description = "High-performance Pact code transformer using tree-sitter with NAPI-RS bindings"
license = "MIT"
authors = ["Salama Ashoush <salamaashoush@gmail.com>"]
keywords = ["pact", "tree-sitter", "transformer", "napi", "nodejs"]
categories = ["development-tools", "parser-implementations"]

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2", default-features = false, features = ["napi8"] }
napi-derive = "2"
tree-sitter = "0.25.6"
tree-sitter-pact = "0.0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
heck = "0.5"
thiserror = "2"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
codegen-units = 1
