[package]
name = "pact-transformer"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "High-performance Pact code transformer with NAPI bindings"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# NAPI bindings
napi = { version = "2", default-features = false, features = ["napi8", "async", "serde-json", "tokio_rt"] }
napi-derive = "2"

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

# Tree-sitter for parsing
tree-sitter = "0.25"
tree-sitter-pact = "0.0.10"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Parallelization
rayon = "1.10"

# Memory optimization
bumpalo = { version = "3", features = ["collections"] }
once_cell = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# Performance
ahash = "0.8"
smallvec = "1"
num_cpus = "1"

# Fast string operations
itoa = "1"
ryu = "1"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = "fat"
opt-level = 3
codegen-units = 1
strip = "symbols"
panic = "abort"

[profile.release.build-override]
opt-level = 3

# Note: For optimal performance, set RUSTFLAGS environment variable:
# RUSTFLAGS="-C target-cpu=native"
