[package]
name = "pact-transformer"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "High-performance Pact code transformer with NAPI bindings"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# NAPI bindings
napi = { version = "2", default-features = false, features = ["napi8", "async", "serde-json", "tokio_rt"] }
napi-derive = "2"

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }

# Tree-sitter for parsing
tree-sitter = "0.25"
tree-sitter-pact = "0.0.10"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
serde_yaml = "0.9"

# Parallelization
rayon = "1.10"

# Memory optimization
bumpalo = { version = "3", features = ["collections"] }
once_cell = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# Performance
ahash = "0.8"
smallvec = "1"
num_cpus = "1"

# Fast string operations
itoa = "1"
ryu = "1"

# File system operations and watching
notify = "6.1"
glob = "0.3"
walkdir = "2"

# Path manipulation
path-clean = "1.0"

# Logging
log = "0.4"

# Source maps
sourcemap = "8.0"
base64 = "0.22"

# Testing support
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }

# Documentation support
html-escape = "0.2"

[dev-dependencies]
tempfile = "3"

[build-dependencies]
napi-build = "2"

